--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This Project explains all Node JS examples",
   "main": "app.js",
    "publishConfig": {
-	"registry": "http://15.206.124.54:9000/"
+	"registry": "http://3.110.121.87:8081/repository/NodeJS_Project/"
   },
   "scripts": {
     "server": "http-server -c-1 -p 9999",
