--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,5 @@
 email=admin@example.org
 #always-auth=true
-_auth=YWRtaW46YWRtaW4=
-registry.npmjs.org/:_auth=YWRtaW46YWRtaW4=
+#_auth=YWRtaW46YWRtaW4=
+registry.npmjs.org/:_auth=YWRtaW46bmV4dXM=
 allowRepublish=true
